@@ -33,8 +33,8 @@ public class FluidPressureModel extends FluidPressureAndFlowModel {
 
         //Show pressure partly submerged in the water, but at the top of the water
         addPressureSensor( new PressureSensor( this, 0, 0 ) );
-
-        //Show second pressure sensor at a y location that yields a different pressure value
+        addPressureSensor( new PressureSensor( this, -4, 2 ) );
+        addPressureSensor( new PressureSensor( this, -4, 2 ) );
         addPressureSensor( new PressureSensor( this, -4, 2 ) );
     }
 
